html draft complete

--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel ="stylesheet" type="text/css" href="./assets/css/style.css">
+  <title>Code Quiz Chapter 1</title>
 </head>
+
 <body>
-    
+  <div class = "wrapper">  
+    <div class = "title">
+      <h1>CODE QUIZ CHAPTER 1</h1>
+    </div>
+    <div><button class = "startTime">Start!</button></div>
+    <div class = "currentTime"></div>
+    <div class = "questionsDiv">
+      <p>Welcome to your first code quiz!</p>
+      <p>This quiz will look into all you have reviewed in Chapter 1.</p>
+      <p><strong>10 seconds</strong> will be deducted for a wrong answer.</p> 
+      <p>Remember, you will have <strong>100 seconds</strong> to complete this 
+      5 question quiz!</p> 
+      <p>Good luck!</p>
+      <ul id = "choicesUL"></ul>
+    </div>
+  </div>
+
+
+  <script src="./assets/js/script.js"></script>
 </body>
 </html>
