--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang = "en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel ="stylesheet" type="text/css" href="./assets/css/style.css">
+  <meta charset = "UTF-8">
+  <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
+  <meta http-equiv = "X-UA-Compatible" content = "ie=edge">
+  <link rel = "stylesheet" type = "text/css" href = "./assets/css/style.css">
   <title>Coding Quiz JavaScript</title>
 </head>
 
@@ -12,19 +12,19 @@
   <div>
     <div>
       <a href = "#" class = "view-scores" onclick = "viewAllScores()">Scores</a>
-      <a href = "#" class = "view-start" onclick = "viewStartPage()" style="display: none;">Start Page</a>
+      <a href = "#" class = "view-start" onclick = "viewStartPage()" style = "display: none;">Start Page</a>
     </div>
-      <div>Time: <div class ="quiz-timer">0</div>
+      <div>Time: <div class = "quiz-timer">0</div>
     </div>
   </div>
 
   <section>
     <main>
       <h1 class = "h1">JavaScript Coding Quiz</h1>
-      <div class = "enter-name" style="display: none;">
+      <div class = "enter-name" style = "display: none;">
         <h3>Please enter your first letter of both first and last name!</h3>
         <div>
-          <input class= "input" type="text" name="score"/><button class ="enter-name-button">Enter</button>
+          <input class = "input" type = "text" name = "score"/><button class = "enter-name-button">Enter</button>
         </div>
       </div>
       <div class = "start-page">
@@ -33,15 +33,15 @@
         <p><strong>20 seconds</strong> will be deducted for a wrong answer.</p> 
         <p>Remember, you will have <strong>100 seconds</strong> to complete this 5 question quiz!</p> 
         <p>Good luck!</p>
-        <button onclick="startQuiz()">Start!</button>
+        <button onclick = "startQuiz()">Start!</button>
       </div>    
       <div class = "option-boxes"></div>
       <div class = "scores-page"></div>
     </main>
   </section>
   
-  <script type="text/javascript" src = "assets/js/question.js"></script>
-  <script type="text/javascript" src = "./assets/js/script.js"></script>
+  <script type= "text/javascript" src = "assets/js/question.js"></script>
+  <script type= "text/javascript" src = "./assets/js/scripts.js"></script>
 </body>
 
 </html>
